feat: setup whale extension manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }
-  ],
-  "start_url": "./index.html",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "manifest_version": 2,
+  "name": "Emoji Picker",
+  "version": "0.0.0",
+  "sidebar_action": {
+    "default_page": "index.html",
+    "default_icon": {
+        "16": "images/icon.png"
+    },
+    "default_title": "Emoji Picker",
+    "use_navigation_bar": true,
+    "mobile_user_agent": true
+  },
+  "background": {
+    "scripts": [
+      "static/js/main.js"
+    ]
+  }
 }
