--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "uglifyjs-webpack-plugin": "1.2.5",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
-    "webpack-dev-server": "3.1.11",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
@@ -53,7 +52,8 @@
     "@types/node": "^12.7.9",
     "@types/react": "^16.9.4",
     "@types/react-dom": "^16.9.1",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.3",
+    "webpack-dev-server": "^3.0.0"
   },
   "jest": {
     "collectCoverageFrom": [
