--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     ],
     "globals": {
       "ts-jest": {
-        "tsConfigFile": "/Users/kakao/Desktop/yeon-priv/whale-extension-emoji-picker/tsconfig.test.json"
+        "tsConfigFile": "./tsconfig.test.json"
       }
     }
   },
