--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@types/react": "^16.9.4",
     "@types/react-dom": "^16.9.1",
     "typescript": "^3.6.3",
-    "webpack-dev-server": "^3.0.0"
+    "webpack-dev-server": "3.0.0"
   },
   "jest": {
     "collectCoverageFrom": [
